<resources>
    <string name="app_name">Simply Task</string>
    <string name="khmer">Khmer</string>
    <string name="english">English</string>
    <string name="about">About</string>
    <string name="more">More</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="routine">Routine</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="share_tab">share tab</string>
    <string name="no_to_do_list">Opps! You don\'t \n have any to-do list today.</string>
    <string name="placeholder">placeholder</string>
    <string name="make_some">Make some</string>
</resources>
