<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_bell"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/more"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        android:orderInCategory="2"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/khmer"
                android:title="@string/khmer"
                android:icon="@mipmap/ic_kh"
                app:showAsAction="never"/>

            <item android:id="@+id/english"
                android:title="@string/english"
                android:icon="@mipmap/ic_en"
                app:showAsAction="never"/>

            <item android:id="@+id/about"
                android:title="@string/about"
                android:icon="@mipmap/ic_info"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>